Bug 1724385 [Linux] Try to create EGLImage over decoded VA-API video frame r=alwu,emilio,media-playback-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D135460